Closed Bug 88593 Opened 25 years ago Closed 22 years ago

Ctrl+select on thread button only selects top message

Categories

(SeaMonkey :: MailNews: Message Display, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: mozilla, Assigned: neil)

References

Details

(Whiteboard: fixed-aviary1.0)

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.1+) Gecko/20010630 BuildID: 2001063006 When you click on the "thread" icon next to a threaded email message, normally the entire thread is expanded and selected. But if you have another message selected and control-click to also select the entire thread, only the first message in the thread is selected, which is counter-intuative. If I wanted to only select the top message, I would click on the message name instead of the thread button (which works). Reproducible: Always Steps to Reproduce: 1. Select a single message. 2. Hold down CTRL and click on the thread icon to the left of a threaded message. Actual Results: Only the first message of the thread is selected (in addition to the single message in step 1). Expected Results: All of the messages in the thread should be selected, in addition to other previously selected messages. This isn't a show stopper or anything, but it is slightly annoying when I have to go and shift-select the entire thread.
QA Contact: esther → laurel
confirmed with 090904 mozilla win32 branch build on win2k. jglick, is this as designed? is there a message selection spec?
Status: UNCONFIRMED → NEW
Ever confirmed: true
This isn't currently spec'd anywhere, but I would agree with the author. What he describes is the desired behavior.
*** Bug 109508 has been marked as a duplicate of this bug. ***
*** Bug 136329 has been marked as a duplicate of this bug. ***
Blocks: 236849
Assignee: sspitzer → neil.parkwaycc.co.uk
OS: Linux → All
Hardware: PC → All
*** Bug 110318 has been marked as a duplicate of this bug. ***
Attached patch Proposed patchSplinter Review
Comment on attachment 148423 [details] [diff] [review] Proposed patch Suggestions for alternate reviewers welcomed, what with multiple identities and pop aggregation they've got enough to do.
Attachment #148423 - Flags: superreview?(bienvenu)
Attachment #148423 - Flags: review?(mscott)
Comment on attachment 148423 [details] [diff] [review] Proposed patch cool, I've always wanted this.
Attachment #148423 - Flags: superreview?(bienvenu) → superreview+
Attachment #148423 - Flags: review?(mscott) → review+
Fix checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Good Job! But, it is nice if we can toggle between select and dissellect.
Whiteboard: fixed-aviary1.0
Ctrl+select on thread does select the thread correctly, but doesn't deselect the thread when clicked again. I want to be able to select every mail/thread with Ctrl-A and then deselect a few threads. Should I file a new bug for this?
*** Bug 251813 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
No longer blocks: 236849
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: