Bug 88593 Make Ctrl+click on thread icon augment entire thread r=mscott sr=bienvenu